[package]
name = "zero2prod"
version = "0.1.0"
authors = [ "Jonatas Oliveira <contact@jonatasoliveira.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
